Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-79209

TableView: bindings in reused items are sometimes not updated

XMLWordPrintable

    • 35fdf3a7b77a79806d0b5d9632b5066e3618adf5 (qt/qtdeclarative/5.14)

      Bindings in reused items are not reevaluated if index, row and column ends up staying the same after being reused.

        1. qtbug79209.zip
          4 kB
          Shveta Mittal
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            richard Richard Moe Gustavsen
            richard Richard Moe Gustavsen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes